<resources>
    <string name="app_name">Gossip Messenger</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="Intro_Text">Stay connected with your friends and loved ones at all times. Sign Up Now</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="sign_up_text">Enter your phone Number to Proceed</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up_with_phone">Sign Up with Phone</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_sign_in">Enter your email and password or Log in using other ways.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_with_phone">Sign In with Phone</string>
    <string name="please_wait">Please Wait</string>
    <string name="sign_in_text">Click to Sign Up!</string>
    <string name="sign_Up_text">Already have an account?</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="harsh_thapa">Harsh Thapa</string>
    <string name="create_group">Create Group</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="send_otp">SEND OTP</string>
    <string name="please_enter_the_otp_sent_to_you">Please Enter the otp sent to you</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="_91">+91</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="is_the_entered_number_correct_if_not_press_edit">Is the entered number correct? If not, press Edit!</string>
    <string name="edit">Edit</string>
    <string name="Yes">Yes</string>
    <string name="enter_name">Enter Name</string>
    <string name="profile_info">Profile Info</string>
    <string name="please_provide_your_name_and_an_optional_profile_picture">Please provide your name and an optional profile picture.</string>
    <string name="search_friend">Enter number to add</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="myProfile">My Profile</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="user_name">User Name</string>
    <string name="update">Update</string>
    <string name="changing_your_phone_number_will_migrate_your_account_info">Changing your phone number will migrate your account info.</string>
    <string name="before_proceeding_please_make_sure_that_you_are_able_to_receive_sms_at_your_new_number">Before proceeding, please make sure that you are able to receive SMS at your new number.</string>
    <string name="next">NEXT</string>
    <string name="friends_statuses">Friends Statuses</string>
    <string name="tap_to_add_status_update">Tap to Add Status Update</string>
    <string name="recent_updates">Recent Updates</string>
    <string name="my_status">My Status</string>
    <string name="message">Message</string>
    <string name="default_notification_channel_id">gossip_messenger_notification_channel_id</string>
    <string name="removeFriend">Remove Friend</string>
    <string name="enter_status">Status</string>
    <string name="proceed">Proceed</string>
    <string name="clearChat">Clear Chat</string>
</resources>