<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddUserDetailsActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_info"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/splash_background"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/please_provide_your_name_and_an_optional_profile_picture"
        android:gravity="center"
        android:textColor="@color/grey"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:elevation="16dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civProfilePicture"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_profile_picture_holder"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/light_grey"
                />

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/shape_button_rounded_stroke"
                android:padding="16dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:inputType="textCapWords"
                />

            <EditText
                android:id="@+id/etUserStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_status"
                android:layout_margin="16dp"
                android:background="@drawable/shape_button_rounded_stroke"
                android:padding="16dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:inputType="textCapWords"
                />

            <Button
                android:id="@+id/btnGoToApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:padding="10dp"
                android:text="@string/proceed"
                android:textColor="@color/white"
                android:background="@drawable/shape_button_rounded"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>