<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.SignInActivity"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/app_name"
            android:textColor="@color/splash_font"
            android:textSize="40sp"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/ic_intro_image"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            />

        <LinearLayout
            android:id="@+id/llEnterNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/let_s_get_started"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:text="@string/Intro_Text"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/bg_box"
                android:layout_marginTop="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_91"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/enter_phone_number"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="8800867476" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/btnGetOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginTop="16dp"
                    android:padding="10dp"
                    android:text="@string/send_otp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@drawable/shape_button_rounded"
                    />

                <ProgressBar
                    android:id="@+id/sendOtpProgressBar"
                    android:layout_width="35dp"
                    android:layout_marginTop="16dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    />

            </FrameLayout>



        </LinearLayout>

    </LinearLayout>

</ScrollView>