<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.VerifyOtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarSignUp"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/otp_verify"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/otp_verification"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/please_enter_the_otp_sent_to_you"
                android:textSize="16sp"
                android:textColor="@color/grey"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/enteredMobileNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="8800867476"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/inputOtp1"
                    android:background="@drawable/bg_box"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor"
                    />

                <EditText
                    android:id="@+id/inputOtp2"
                    android:background="@drawable/bg_box"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor"
                    />

                <EditText
                    android:id="@+id/inputOtp3"
                    android:background="@drawable/bg_box"
                    android:layout_width="40dp"
                    android:layout_marginEnd="4dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor"
                    />

                <EditText
                    android:id="@+id/inputOtp4"
                    android:background="@drawable/bg_box"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor"
                    />

                <EditText
                    android:id="@+id/inputOtp5"
                    android:background="@drawable/bg_box"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor"
                    />

                <EditText
                    android:id="@+id/inputOtp6"
                    android:background="@drawable/bg_box"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor"
                    />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/btnVerifyOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_button_rounded"
                    android:text="@string/verify_otp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    />

                <ProgressBar
                    android:id="@+id/verifyOtpProgressBar"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>